[tool.poetry]
name = "flake8-django"
version = "1.4"
license = "GPL-3.0-or-later"
description = "Plugin to catch bad style specific to Django Projects."
authors = ["Rocio Aramberri Schegel <rocio.aramberri@schegel.net>"]
readme = "README.md"
keywords = ["flake8", "django", "lint"]
repository = "https://github.com/rocioar/flake8-django"
classifiers=[
    "Framework :: Flake8",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
DJ0 = "flake8_django:DjangoStyleChecker"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
astroid = "^2.15.2"
python = "^3.7.2"
flake8 = ">=3.8.4,<7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
twine = "^4.0.1"
django = ">=3.2"
